# simd_vector

./: Cargo.toml  LICENSE.txt  README.md
.cargo/: config.toml
.claude/: settings.json
src/: lib.rs  tests.rs  vec4.rs  vec8.rs
