[package]
name = "simd_vector"
version = "0.3.1"
edition = "2024"
description = "SIMD vector types (Vec4, Vec8) for x86-64 in pure stable Rust — SSE4.1, AVX2, FMA3"
license = "MIT"
repository = "https://github.com/fxeqxmulfx/simd_vector"
readme = "README.md"
keywords = ["simd", "vector", "avx2", "sse", "fma"]
categories = ["mathematics", "science"]
exclude = [".cargo/config.toml", ".claude/", ".gitignore"]

[dependencies]
